language/move-lang/tests/move_check/typing/seq_cannot_ignore_resource.exp
error: 

   ┌── tests/move_check/typing/seq_cannot_ignore_resource.move:5:9 ───
   │
 5 │         R{};
   │         ^^^ Cannot ignore resource values. The value must be used
   ·
 5 │         R{};
   │         --- The type: '0x8675309::M::R'
   ·
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   │

error: 

    ┌── tests/move_check/typing/seq_cannot_ignore_resource.move:10:9 ───
    │
 10 │         r;
    │         ^ Cannot ignore resource values. The value must be used
    ·
  9 │         let r = R{};
    │                 --- The type: '0x8675309::M::R'
    ·
  2 │     resource struct R {}
    │     -------- Is found to be a non-copyable type here
    │

error: 

    ┌── tests/move_check/typing/seq_cannot_ignore_resource.move:14:9 ───
    │
 14 │         (0, false, R{});
    │         ^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
    ·
 14 │         (0, false, R{});
    │         --------------- The type: '(u64, bool, 0x8675309::M::R)'
    ·
  2 │     resource struct R {}
    │     -------- Is found to be a non-copyable type here
    │

error: 

    ┌── tests/move_check/typing/seq_cannot_ignore_resource.move:19:9 ───
    │
 19 │         if (true) (0, false, R{}) else (0, false, r);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
    ·
 19 │         if (true) (0, false, R{}) else (0, false, r);
    │                                        ------------- The type: '(u64, bool, 0x8675309::M::R)'
    ·
  2 │     resource struct R {}
    │     -------- Is found to be a non-copyable type here
    │

